--- a/Lab1 - ProdDev.ipynb
+++ b/Lab1 - ProdDev.ipynb
@@ -18,12 +18,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class regresion():\n",
+    "    \n",
+    "    dicc={}\n",
+    "    \n",
+    "    def __init__(self, x, y):\n",
+    "        \n",
+    "        # Lectura datos\n",
+    "        self.dataX = list(x)\n",
+    "        self.dataY = list(y)\n",
+    "        \n",
+    "        #Calculos Regresion\n",
+    "        self.n = len(x)\n",
+    "        self.sumX=sum(x)\n",
+    "        self.sumY=sum(y)\n",
+    "        \n",
+    "        self.sumXY = sum([a * b for a, b in zip(x,y)])\n",
+    "        self.x2 =(sum([a * b for a, b in zip(x,x)]))\n",
+    "        \n",
+    "        # Calculo Betas\n",
+    "        self.b0 = ((self.n * self.sumXY)-(self.sumX*self.sumY))/((self.n * self.x2)-(self.sumX**2))\n",
+    "        self.b1=((self.x2*self.sumY)-(self.sumX*self.sumXY))/((self.n * self.x2-(self.sumX**2)))\n",
+    "        regresion.dicc[\"b0\"]=self.b0\n",
+    "        regresion.dicc[\"b1\"]=self.b1\n",
+    "    \n",
+    "    def predict(self,val):\n",
+    "        prediccion_inicial = (self.b0 * val + self.b1)\n",
+    "        return prediccion_inicial\n",
+    "    \n",
+    "    def predictN(self,vals):\n",
+    "        self.value = list(vals)\n",
+    "        self.resul = ([self.b0 * vals + self.b1 for vals in self.value])\n",
+    "        return self.resul\n",
+    "        \n",
+    "    def r2(self):\n",
+    "        self.error = (sum([a - b for a, b in zip(self.resul,self.dataY)]))**2        \n",
+    "        regresion.dicc[\"r2\"]=self.error\n",
+    "        return self.error\n",
+    "    \n",
+    "    def r(self):\n",
+    "        self.r = np.sqrt(self.error)\n",
+    "        regresion.dicc[\"r\"]=self.r\n",
+    "        return self.r\n",
+    "    \n",
+    "    def getAllParams(self):\n",
+    "        return regresion.dicc\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def fileC(cls,path):\n",
+    "        return cls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'b0': -0.9787878787878788, 'b1': 11.333333333333334, 'r2': 7.888609052210118e-29, 'r': 8.881784197001252e-15}\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = regresion(list((1,2,3,4,5,6,7,8,9,10)),list((10,9.5,8.75,7.25,6.75,5.5,4.25,3.5,2.25,1.75)))\n",
+    "\n",
+    "data.predict(10)\n",
+    "data.predictN(list((1,2,3,4,5,6,7,8,9,10)))\n",
+    "data.r2()\n",
+    "data.r()\n",
+    "\n",
+    "#print(data.predict(10))\n",
+    "#print(data.predictN(list((1,2,3,4,5,6,7,8,9,10))))\n",
+    "#print(data.r2())\n",
+    "#print(data.r())\n",
+    "\n",
+    "print(data.getAllParams())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'b0': -0.9787878787878788, 'b1': 11.333333333333334, 'r2': 7.888609052210118e-29, 'r': 8.881784197001252e-15}\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.fileC(\"Users/user/Documents/2021ProdDev/Lab1/data.csv\")\n",
+    "\n",
+    "data.predict(10)\n",
+    "data.predictN(list((1,2,3,4,5,6,7,8,9,10)))\n",
+    "data.r2()\n",
+    "\n",
+    "\n",
+    "#print(data.predict(10))\n",
+    "#print(data.predictN(list((1,2,3,4,5,6,7,8,9,10))))\n",
+    "#print(data.r2())\n",
+    "#print(data.r())\n",
+    "\n",
+    "print(data.getAllParams())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Laboratorio Anterior"
    ]
   },
   {
